[gd_scene load_steps=4 format=3 uid="uid://dfp27k38qwnjd"]

[ext_resource type="Theme" uid="uid://kisphu66ymdx" path="res://scenes/Themes/main_theme.tres" id="1_84a8r"]
[ext_resource type="Script" path="res://scenes/UI/MainMenu.gd" id="2_rpoj7"]
[ext_resource type="PackedScene" uid="uid://do5m2xbrmjyst" path="res://scenes/UI/new_game_menu.tscn" id="3_txile"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_84a8r")
script = ExtResource("2_rpoj7")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.0862745)

[node name="SplashScene" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="SplashScene"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SplashScene/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 86
text = "Swingy"

[node name="NewGameMenu" parent="." instance=ExtResource("3_txile")]
visible = false
layout_mode = 1

[connection signal="new_game" from="NewGameMenu" to="." method="_on_new_game_menu_new_game"]
